# faceprint_process

./: .justfile  arabic_names.py  duty.csv  main.py  pyproject.toml
functions/: cleanup.py  extract_excuses.py  filter.py  process_duty_rest.py  process_excuses.py  process_faceprint.py  process_report.py  tables.py  utils.py
functions/post_process/: change_headers.py
functions/pre_process/duty/: drop_cols.py  duty_processing.py  hours_fixer.py  military_time.py  remove_duties.py
functions/process_report/: extract_excuses.py  tables.py
pages/: centers.py  office.py
required/: headers.json
sql/duty_rest/: create_duty_rest_tables.sql  drop_staging_tables.sql  filter_duty_fullday.sql  filter_duty_halfday.sql  filter_rest_day.sql  filter_rest_time.sql  insert_duty_rest_tables.sql  insert_duty_staging.sql  insert_rest_staging.sql
sql/excuse/: filter.sql  load.sql  split.sql
sql/export/: faceprint.sql  report.sql
sql/faceprint/: create_arabic_tables.sql  create_faceprint_tables.sql  extract_attendant.sql  extract_fullday.sql  extract_halfday.sql  fullday_tables.sql  halfday_tables.sql  insert_faceprint_attendant.sql  insert_faceprint_df.sql  load.sql
sql/report/: create_arabic_tables.sql  create_report_tables.sql  extract_attendant.sql  extract_fullday.sql  extract_halfday.sql  extract_report.sql  fullday_tables.sql  halfday_missing_tables.sql  halfday_tables.sql  insert_report_attendant.sql  insert_report_df.sql  label.sql  label_earlylate_absent.sql  load.sql
sql/schema/: excuse_tables.sql  faceprint_tables.sql  report_tables.sql
(+10 files in other folders)
